@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Add helpers for implementing a variety of graph traversal iterators.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Merge pgfgdbeginscope and pgf@gd@beginscope. Use {begin,end}group.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
